--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:title="Settings"/>
+        android:title="Settings"
+        android:id="@+id/settings"/>
+    <item
+        android:title="Quiz"
+        android:id="@+id/quiz"/>
 
 </menu>
